2014-07-22  Julien Bect  <julien.bect@supelec.fr>

	stk_param_relik.m: Check symmetry of G = W' * K * W.

	* paramestim/stk_param_relik.m: Check if G = W' * K * W and apply
	a naive fix if it is not (+ emit a warning).
	* config/stk_config_setup.m: Do not display the new warning.
	* core/stk_cholcov.m: Only issue one warning if using epsi.

	Improve the implementation of stk_dataframe objects display.

	* arrays/@stk_dataframe/disp.m: Modified.
	* arrays/@stk_dataframe/display.m: Modified.
	* arrays/@stk_factorialdesign/stk_sprintf_levels.m: Modified.
	* arrays/@stk_dataframe/stk_sprintf.m: New function.
	* arrays/@stk_factorialdesign/stk_sprintf.m: New function.
	* arrays/generic/stk_sprintf.m: New function.
	* arrays/@stk_dataframe/stk_sprintf_data.m: Removed.
	* arrays/@stk_factorialdesign/disp.m: Removed.
	* arrays/generic/stk_sprintf_data.m: Removed.

	Implement stk_sprintf_sizetype for cell arrays.

	* arrays/@cell/stk_sprintf_sizetype.m: Implement
	stk_sprintf_sizetype for cell arrays.
	* arrays/@stk_dataframe/stk_sprintf_sizetype.m: Minor formatting
	change in the output string (remove spaces).
	* arrays/generic/stk_sprintf_sizetype.m: Idem.

2014-07-21  Julien Bect  <julien.bect@supelec.fr>

	stk_config_buildmex.m: Run silently when doing nothing.

	* config/stk_config_buildmex.m: Run silently when doing nothing.

	Remove page_screen_output (not needed anymore).

	* misc/mole/matlab/page_screen_output.m: Deleted (not needed
	anymore).

	Stop bothering users at startup.

	* stk_init.m: Stop bothering users at startup with information
	that they can find in the README file anyway.

	Don't display selected optimizers at startup.

	* misc/optim/stk_select_optimizer.m: Don't display selected
	optimizers when called without input arguments (typically, during
	startup).

2014-07-20  Julien Bect  <julien.bect@supelec.fr>

	stk_config_setup.m: Call stk_parallel_engine_set.

	* config/stk_config_setup.m: Call stk_parallel_engine_set.
